// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 css-fukgk-euiAvatar-m-user"
  data-test-subj="test subject string"
  role="img"
  style="background-color:#ee789d;color:#000000"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`EuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 css-fukgk-euiAvatar-m-user"
  data-test-subj="test subject string"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as plain is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar--plain css-1eyob02-euiAvatar-m-user-plain"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as string is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconColor as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="bolt"
  >
    name
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconColor is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="primary"
    data-euiicon-type="bolt"
  >
    name
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconSize is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  >
    name
  </span>
</div>
`;

exports[`EuiAvatar props iconType is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  >
    name
  </span>
</div>
`;

exports[`EuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000;background-image:url(image url)"
  title="name"
/>
`;

exports[`EuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    l
  </span>
</div>
`;

exports[`EuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`EuiAvatar props isDisabled is rendered 1`] = `
<div
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar-isDisabled css-ca65vv-euiAvatar-m-user-isDisabled"
  role="presentation"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--l euiAvatar--user css-1geg2f0-euiAvatar-l-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--s euiAvatar--user css-54k9iu-euiAvatar-s-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--xl euiAvatar--user css-1arsn1m-euiAvatar-xl-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--space css-i1jkim-euiAvatar-m-space"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar should throw error if color is not a hex 1`] = `"EuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;

exports[`EuiAvatar should throw error if color is not a hex: renders with emotion styles 1`] = `
.css-fukgk-euiAvatar-m-user {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-background-size: cover;
  background-size: cover;
  text-align: center;
  vertical-align: middle;
  overflow-x: hidden;
  font-weight: 500;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: calc(16px * 0.9);
  border-radius: 50%;
}

<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user css-fukgk-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;
